--- a/telemetrify-nso/README.nid-package.org
+++ b/telemetrify-nso/README.nid-package.org
@@ -1,7 +1,7 @@
-* NSO in Docker: NED standard form skeleton
-  This is the README file for the NSO in Docker (NID) standard form NED skeleton. If you see this file (=README.nid-ned.org=) in a repository, it means the repository follows the standard form.
+* NSO in Docker: package standard form skeleton
+  This is the README file for the NSO in Docker (NID) standard form package skeleton. If you see this file (=README.nid-package.org=) in a repository, it means the repository follows the standard form.
 
-  The NED standard form provides a standardized environment, called a =testenv=, for how to do development and testing. It ships with a CI configuration file for GitLab that enables the test environment to automatically run in CI. All repositories using these skeletons provide a consistent user interface.
+  The NID package standard form provides a standardized environment, called a =testenv=, for how to do development and testing of NSO packages. It ships with a CI configuration file for GitLab that enables the test environment to automatically run in CI. All repositories using these skeletons provide a consistent user interface.
 
 * Usage of a repo that follows the NED standard form
   Run ~make all~ to build and test the NED. You will need to set the =NSO_VERSION= environment variable and likely =NSO_IMAGE_PATH=, for example:
@@ -28,37 +28,17 @@
    For a local build, =IMAGE_PATH= does not have a default value but can be manually set.
 
 ** Building and testing
-   As part of the =build= make target, three docker images are produced:
-   - =netsim=: a Docker image that runs the NED as a netsim device
-   - =testnso=: an NSO image that has the NED loaded
-     - it runs NSO on start and is thus ready to use the NED to talk to, for example, the =netsim= device
-   - =ned=: a Docker image that only contains the compiled NED
+   As part of the =build= make target, two docker images are produced:
+   - =testnso=: an NSO image that has the package loaded
+   - =package=: a Docker image that only contains the compiled package
      - this container can't be run, it's only a vessel to carry the compiled output to another Docker image build
 
    To produce these images, a multi-stage Dockerfile is used where the first stage compiles packages and later stages produce the mentioned images.
 
    After build, the test suite will start up a test environment (=testenv=) that consists of:
-   - =netsim= container running the =netsim= image
    - =nso= container running the =testnso= image
 
-   Then the tests, defined in the =testenv-test= target of the repository specific =Makefile=, are run. The skeleton contains an example for how to run basic tests on the NED that verifies (together with the build):
-   - YANG models compiles (happens as part of =build=)
-   - compiled NED loads in NSO (or the =testnso= container would fail to start)
-   - netsim starts up
-   - NSO can write configuration to the =netsim= and read it back
-     - this test is accomplished by loading an XML configuration file that needs to be customised for the particular NED
-       - do note however that it is the ONLY step that needs customization to achieve (CI) testing of a NED
-       - modify the file at =test/device-config-hostname.xml=
-
-** Building multiple versions of a NED
-   A very common task in the lifecycle of a NED is upgrading the device model. A new version of a device model with backwards incompatible changes usually defines a new ned-id. This allows users to load both old and version of the package in their NSO instance and migrate the devices at their leisure. To build multiple versions of the package in the same NED repository just place the directories in the =packages= directory. For example, the =packages= directory contains =ned-foo-1.0= and =ned-foo-2.0= directories. The build script will automatically create additional docker images with the tags:
-   - "repo/package" contains all versions (all directories)
-   - "repo/package-ned-foo-1.0" contains just the package with the name =ned-foo-1.0=
-   - "repo/package-ned-foo-2.0" contains just the package with the name =ned-foo-2.0=
-   - "repo/testnso" contains all versions
-   - "repo/netsim" contains just the latest version
-   - "repo/netsim-ned-foo-1.0" contains just the package with the name =ned-foo-1.0=
-   - "repo/netsim-ned-foo-2.0" contains just the package with the name =ned-foo-2.0=
+   Then the tests, defined in the =test= target of the repository specific =Makefile=, are run. The skeleton contains some examples for how to run basic tests in NSO. The actual tests need to be adopted to the functionality of the NSO package in question.
 
 ** The test environment - testenv
    A =testenv= is a standardized test environment that contains recipes for
@@ -67,11 +47,10 @@
    =testenv=.
    There are a number of make targets related to the control of =testenv=:
    - =start=: Start the test environment
-     - the standard topology, which consists of one test NSO instance (of the =testnso= image) and one netsim (of the =netsim= image) is defined in the standard form NED skeleton
+     - the standard topology, which consists of a single test NSO instance (of the =testnso= image) is defined in the standard form package skeleton
      - a Docker network specific to this testenv is used
        - this makes it possible to have network localized names, like a netsim can be called and accessed via the name =dev1= and Docker handles name resolution to the actual IP address
          - running multiple =testenv= in parallel won't collide as we have a network (namespace) per =testenv=
-       - the netsim container is called =dev1=
        - IPv4 and IPv6 is enabled per default
          - IPv6 uses ULA addressing (essentially a random IPv6 prefix)
            - only local connectivity (no default route)
@@ -124,25 +103,25 @@
 
 ** Repository related make targets
    - =build=: Builds the images
-   - =push=: Pushes the =ned= image
+   - =push=: Pushes the =package= image
    - =tag-release=: Adds a tag with release version, like =5.3=
    - =push-release=: Pushes the release version to the Docker registry
      - this is based on the =CI_REGISTRY_IMAGE= variable set by GitLab CI
 
 * Applying the skeleton / Creating a new repo based on the skeleton
-  The NED standard form comes as a skeleton that can be applied to a repository by copying over a number of files to your repository. If you are starting from scratch, simple copy the skeleton directory (and init git), like:
+  The NID package standard form comes as a skeleton that can be applied to a repository by copying over a number of files to your repository. If you are starting from scratch, simple copy the skeleton directory (and init git), like:
 
   #+BEGIN_SRC shell
-    cp -av ../nso-docker/skeletons/ned my-ned
-    cd my-ned
+    cp -av ../nso-docker/skeletons/package my-package
+    cd my-package
     git init
     git add .
-    git commit -a -m "Starting from NID skeleton for NEDs"
+    git commit -a -m "Starting from NID skeleton for package"
   #+END_SRC
 
-  Place your NED package in the =packages/= folder, despite the plural 's' on =packages=, you should only use a single NED per repository (other skeletons in the NID ecosystem supports multiple packages). This will automatically include them in the build.
+  Place your NSO package in the =packages/= folder, despite the plural 's' on =packages=, you should only use a single package per repository (other skeletons in the NID ecosystem supports multiple packages). This will automatically include them in the build.
 
-  If you are building a new NED, you can start a =dev-shell= to run =ncs-make-package=. For this we need access to the =cisco-nso-dev= image, set =NSO_VERSION= and =NSO_IMAGE_PATH= accordingly (see top of this file for more information on that).
+  If you are building a new package, you can start a =dev-shell= to run =ncs-make-package=. For this we need access to the =cisco-nso-dev= image, set =NSO_VERSION= and =NSO_IMAGE_PATH= accordingly (see top of this file for more information on that).
 
   #+BEGIN_SRC shell
     export NSO_VERSION=5.3
@@ -150,12 +129,12 @@
     make dev-shell
   #+END_SRC
 
-  Once in the =dev-shell= we can use =ncs-make-package= to make a new package. Our package folder is mounted in =/src=. Let's say we want to make a NETCONF NED out of some YANG models in =device-yang-models/=:
+  Once in the =dev-shell= we can use =ncs-make-package= to make a new package. Our package folder is mounted in =/src=. Let's say we want to make a python based package:
 
   #+BEGIN_SRC shell
     cd /src/packages
-    ncs-make-package --netconf-ned /src/device-yang-models myned
-    chown -Rv 1000:1000 myned
+    ncs-make-package --service-skeleton python-and-template package-foo
+    chown -Rv 1000:1000 package-foo
   #+END_SRC
 
   Note how when you are working in a Docker container you are root and as such, files you create are owned by root. Change ownership to your own id/gid from within the container. Also note how the container is not aware of your username nor group, so you need to use numeric identifiers.
@@ -167,7 +146,7 @@
     make testenv-start
   #+END_SRC
 
-  Modify the =Makefile= to apply the tests you want. For the NED skeleton, an example is included that tests the NED & netsim in combination, see the =Makefile= for more information.
+  Modify the =Makefile=, which includes some examples, to apply the tests you want.
 
 * Including external packages
   You can include externally built packages by placing a manifest file in the =includes/= folder. It is in fact encouraged to build most packages, such as NEDs and other packages on their own separate git repositories where they can be developed and tested in isolation and later include them.
@@ -184,8 +163,6 @@
 
   Included packages are included in the =testnso= container image but not in the final output in the =package= image.
 
-  NEDs do not typically depend on other packages and so includes might not be useful for the NED package itself, however, the test-packages could very well depend on an external package for which the include manifest functionality can be used.
-
 ** Reducing rebuilds when updating NSO patch version
     When you use the =NSO_VERSION= variable in the includes manifests it means that dependencies have to be rebuilt for every NSO version change. This includes maintenance releases, like going from version 5.8 to 5.8.3 where rebuilding is not strictly necessary, as the *.fxs files are compatible inside a major.minor version train. To take advantage of compatibility guarantee and forego the step of rebuilding everything for maintenance and patch version changes you can use the =NSO_VERSION_MM= variable instead. The skeletons automatically tag the images built with the tip-of-train (highest maintenance / patch release) version with the =MM_$(NSO_VERSION_MM)= tag, which contains just the major, minor and extra tags from the full version. For example, =NSO_VERSION= set to 5.8.3 becomes =NSO_VERSION_MM= 5.8 and 5.8.3_nightly becomes 5.8_nightly. An example of an include file manifest using =NSO_VERSION_MM= looks like this:
 
@@ -199,21 +176,20 @@
   It is possible to include more files in the Docker image by merely placing them in the directory =extra-files/=. The entire content of =extra-files/= is copied to the root of the resulting =testnso= image, for example, create =extra-files/tmp/foobar= to have it placed at =/tmp/foobar= in the =testnso= image.
 
 * Skeleton content
-  The NED skeleton contains the following files
-  - =README.nid-ned.org=: This README file
+  The NID package standard form comes as a skeleton that can be applied to a repository by copying over a number of files to your repository. The files are:
+  - =README.nid-package.org=: This README file
   - =.gitlab-ci.yml=: a GitLab CI configuration file that runs the standard testenv targets
   - =nidcommon.mk=: Makefile with definitions common across the NID skeletons
-  - =nidned.mk=: Makefile with common targets for the NED skeleton
+  - =nidpackage.mk=: Makefile with common targets for the NID package skeleton
   - =Makefile=: repository specific Makefile, while it comes with the skeleton, this is meant to be customized for each project
-  - =run-netsim.sh=: A Docker entrypoint script for running a netsim container
   - =testenvs/=: Directory containing the testenvs, with subdirectories for each testenv. While a "quick" testenv comes with the skeleton, this is meant to be customized for each project
-  - =packages/=: Standard location for placing the NSO package for the NED itself. Supports multiple packages - for example multiple versions of the same NED like =packages/ned-foo-1.0= and =packages/ned-foo-2.0=.
-  - =test-packages/=: Standard location for placing NSO packages for testing. These are included in the =testnso= container that can be used to test the NED but aren't included in the final output.
+  - =packages/=: Standard location for placing the NSO package itself
+  - =test-packages/=: Standard location for placing NSO packages for testing. These are included in the =testnso= container that can be used to test the package but aren't included in the final output.
   - =includes/=: Standard location for placing manifests for including externally built packages
   - =extra-files/=: Standard location for placing extra files to be included in the =testnso=. Files are relative to the image file system root, i.e. create =extra-files/tmp/foobar= to have it placed at =/tmp/foobar= in the Docker image.
 
 ** Skeleton source location and updating the skeleton
-   The authoritative origin for the standard form NED skeleton is the =nso-docker= repository at [[https://gitlab.com/nso-developer/nso-docker/]], specifically in the directory =skeletons/ned=. To upgrade to a later version of the skeleton, pull the files from that location and avoid touching the =Makefile= as it typically contains custom modifications. Be sure to include files starting with a dot (=.=).
+   The authoritative origin for the standard form NID package skeleton is the =nso-docker= repository at [[https://gitlab.com/nso-developer/nso-docker/]], specifically in the directory =skeletons/package=. To upgrade to a later version of the skeleton, pull the files from that location and avoid touching the =Makefile= as it typically contains custom modifications. Be sure to include files starting with a dot (=.=).
 
 * Python dependencies & virtualenv
   If you are using Python for your NSO package and depend on external Python packages, you should declare them in =src/requirements.txt=. The NSO in Docker build system will automatically build a Python virtualenv based on the =requirements.txt= file. The virtualenv is placed in =pyvenv/=.
